third_party/rust/paste/tests/ui/no-ident-after-colon.stderr
error: expected identifier after `:`
 --> tests/ui/no-ident-after-colon.rs:4:15
  |
4 |     fn [<name:0>]() {}
  |               ^
