third_party/rust/paste/tests/ui/no-ident-after-colon.rs
use paste::paste;

paste! {
    fn [<name:0>]() {}
}

fn main() {}
